<resources>
    <string name="app_name">quantum</string>
    <string name="action_settings">Settings</string>
    <string name="descoberta">O que você descobriu?</string>
    <string name="sabia">O você sabia que</string>
    <string name="propria">Própria</string>
    <string name="fonte">Fonte:</string>
    <string name="perfil">Perfil</string>
    <string name="nome_usuario">Nome Usuário</string>
    <string name="descricao">Pequena descrição</string>
    <string name="biografia">Biografia</string>
    <string name="curiosidade">Você sabia que</string>
    <string name="outra_curiosidade">E você sabia que</string>
    <string name="voce_sabe">O que você sabe?</string>
    <string name="fonte_propria">Própria</string>
    <string name="num_ideiaum">0</string>
    <string name="num_ideiadois">0</string>
    <string name="comentar">0</string>
    <string name="login">Usuário</string>
    <string name="esqueci">Esqueci minha senha</string>
    <string name="mensagem">Mensagem</string>
    <string name="sua_mansagem">Sua mensagem</string>

</resources>
